Fixed flicker on file list item hover

--- a/app/styles/less/file-browser.less
+++ b/app/styles/less/file-browser.less
@@ -32,7 +32,6 @@
     padding: 3px 0;
     min-width: 145px;
     font-size: 13px;
-    line-height: 18px;
     border-radius: 2px;
     box-shadow: 3px 3px 10px 0 rgba(0,0,0,0.25);
     opacity: 0.95;
@@ -56,6 +55,7 @@
     padding: 0;
     overflow: auto;
     list-style: none;
+    line-height: 15px;
 
     background-color: rgb(20,21,25);
     .box-shadow(2px 2px 7px -2px #333);
